finished mobile responsiveness

--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -250,12 +250,13 @@
     padding-left: 7.5%;
 
     padding-right: 8%;
+
    // background-color: #688268;
     margin-left: auto;
    // padding-top: 1.625rem;
    // position: absolute;
 
-    margin-top: .5rem;
+    margin-top: 0.5rem;
     align-items: center;
     overflow: hidden;
     display: flex;
