--- a/app/globals.css
+++ b/app/globals.css
@@ -114,6 +114,7 @@ a {
     margin: 0;
     overflow-y: scroll;
     background: linear-gradient(180deg,#303C30 ,#212a21 60%);
+   
     background: #303C30;
    /* width: 100%;*/
    min-width: 100%;
@@ -121,7 +122,7 @@ a {
   html{
     padding:0;
     margin:0;
-    background-color: #303C30;
+    background: #303C30;
 
   }
 }
