--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -2360,7 +2360,7 @@ padding-bottom: 5rem;
     padding-left:1.5rem;
     padding-right: 1.325rem;
     padding-top: .5rem;
-    margin-top: .5rem;
+    margin-top: 0;
     padding-bottom: .425rem;
     align-self: center;
     white-space: nowrap;
