--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -325,7 +325,7 @@
   padding-bottom: 1.5px;
 }
 .contextPriceStar {
-  transform: translateX(-.5rem) translateY(-.15rem);
+  transform: translateX(-.5rem) translateY(-.175rem);
   align-self: flex-end;
   transition: all .2s linear;
 }
@@ -551,6 +551,7 @@
   background-color: transparent;
  // background-color: red;
   max-height: 61.5vh;
+ 
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -1565,7 +1566,7 @@ padding-bottom: 5rem;
    .heroButtonAlt:hover {
      background-color: #FAF3D6;
      color:#0a0a0a;
-     font-weight: 500;
+     font-weight: 400;
    
    }
    .contentContainerAlt {
@@ -2841,7 +2842,7 @@ padding-bottom: 5rem;
      min-width: fit-content;
     height: auto;
    // background-color: blue;
-     gap:2.25rem;
+     gap:2rem;
      padding-top: 2.5rem;
      padding-left: 0rem;
    }
@@ -2898,7 +2899,7 @@ padding-bottom: 5rem;
      color:#fff;
      transition: all .2s linear;
     // font-size: 22px;
-    font-size: clamp(.875rem, 4.125vw, 1.375rem);
+    font-size: clamp(.875rem, 4.125vw, 1.35rem);
      font-weight: 400;
      border-radius: 121px;
      padding-left:1.875rem;
@@ -2910,7 +2911,7 @@ padding-bottom: 5rem;
    .heroButtonAlt:hover {
      background-color: #FAF3D6;
      color:#0a0a0a;
-     font-weight: 500;
+     font-weight: 400;
    
    }
    .contentContainerAlt {
@@ -2971,12 +2972,21 @@ padding-bottom: 5rem;
 
   .dotGrid {
     display: none;
+    top:3.5rem;
+    transform: scale(.95);
+    left:-50vw;
   }
   .dotGridAlt {
     display: none;
   }
   .cornerVector {
-    display: none;
+    display:none;
+    width: 36px;
+    height: 36px;
+    top:0.125rem;
+
+    left:7.75rem;
+    opacity: 1;
   }
   .cornerVectorAlt {
     display: none;
@@ -3150,7 +3160,7 @@ padding-bottom: 5rem;
   font-family: Helvetica Neue;
   white-space: nowrap;
   //font-size: 26px;
-  font-size: clamp(1rem, 3.25vw, 1.625rem);
+  font-size: clamp(1rem, 3.125vw, 1.625rem);
   font-style: normal;
   font-weight: 300;
   line-height: 122%; /* 42.273px */
@@ -3163,7 +3173,7 @@ padding-bottom: 5rem;
   font-family: Helvetica Neue;
   white-space: normal;
   //font-size: 26.25px;
-  font-size: clamp(1rem, 3vw, 1.625rem);
+  font-size: clamp(1rem, 3.125vw, 1.625rem);
   font-style: normal;
   font-weight: 300;
   line-height: 122%; /* 42.273px */
@@ -3172,8 +3182,8 @@ padding-bottom: 5rem;
 }
 .subSeperatorSmall {
   transform: translateY(0);
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
 }
   // carousel 1
   .carouselSection {
@@ -3181,13 +3191,32 @@ padding-bottom: 5rem;
   
     width: 100%;
     //height: 61.5vh;
+    background-color: transparent;
     display: flex;
-
+    height: fit-content;
     flex-direction: column;
-    height: 12.75rem;
+
+  }
+  .sliderContainer {
+    min-width: 100vw;
+    max-width: 100vw;
+    background-color: transparent;
+ 
+    max-height: 20rem;
+   
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    z-index: 0;
+    height: 100%;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+    left: 0;
   }
   .carouselContainer {
-    height: 100%;
+    height: 20rem;
+
     background-color: #454545;
     min-width: fit-content;
   
@@ -3228,7 +3257,7 @@ padding-bottom: 5rem;
     justify-content: center;
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
+
     object-fit: cover;
     
   
@@ -3301,11 +3330,12 @@ padding-bottom: 5rem;
   .applyHeroContainer {
     display: flex;
     flex-direction: column;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    width: 100%;
-    
 
+    padding-left: 0.25rem;
+    padding-right: 0rem;
+    width: 88%;
+    
+   // background-color: blue;
     padding-bottom: 2.125rem;
 
   }
@@ -3354,20 +3384,20 @@ padding-bottom: 5rem;
   }
   .applyButtonContainer {
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    align-self: center;
+    margin-left: 0;
+    margin-right: 0;
+    align-self: flex-start;
      display:flex;
      min-width: fit-content;
     height: auto;
-   // background-color: blue;
-     gap:.625rem;
+    //background-color: blue;
+     gap:1.35rem;
      padding-top: 2rem;
      padding-left: 0rem;
    }
   .applyTodayButton {
     width: fit-content;
-    height:3rem;
+    height:3.75rem;
 
     flex-shrink: 0;
     border-radius: 90.75px;
@@ -3380,7 +3410,7 @@ padding-bottom: 5rem;
     text-align: center;
     font-family: Helvetica Neue;
     //font-size: 22.5px;
-    font-size: clamp(.875rem, 4.125vw, 1.375rem);
+    font-size: clamp(.875rem, 4vw, 1.275rem);
     //padding-bottom: 1.5px;
     font-style: normal;
     font-weight: 500;
@@ -3389,10 +3419,10 @@ padding-bottom: 5rem;
     text-transform: capitalize;
     filter: drop-shadow(0px 4px 8px rgba(0,0,0,0.25));
     transition: all .15s linear;
-    padding-left:1.25rem;
-    padding-right: 1.25rem;
+    padding-left:1.75rem;
+    padding-right: 1.75rem;
     padding-top: .4rem;
-    padding-bottom: .4rem;
+    padding-bottom: .425rem;
   }
   .applyTodayButton:hover {
     transform: scale(1.05);
@@ -3405,7 +3435,7 @@ padding-bottom: 5rem;
     border: 2px solid #fff;
     width: fit-content;
 
-    height: 3rem;
+    height: 3.75rem;
     color: #f9f9f9;
     display: flex;
     align-items: center;
@@ -3413,12 +3443,12 @@ padding-bottom: 5rem;
     justify-content: center;
     font-family: Helvetica Neue;
     //font-size: 22.5px;
-    font-size: clamp(.875rem, 4.125vw, 1.375rem);
+    font-size: clamp(.875rem, 4.125vw, 1.275rem);
     font-weight: 400;
     font-style: normal;
 
-    padding-left:1rem;
-    padding-right: 1rem;
+    padding-left:1.75rem;
+    padding-right: 1.75rem;
      padding-top: 0.375rem;
      padding-bottom: 0.375rem;
     line-height: 122%; /* 27.445px */
@@ -3448,7 +3478,7 @@ padding-bottom: 5rem;
       width: 88%;
       padding-right: 0;
       padding-bottom: 0;
-      height: 16rem;
+      height: 24rem;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -3500,7 +3530,7 @@ padding-bottom: 5rem;
   .propositionBottomContainer {
     min-height: fit-content;
     //height: 110vh;
-    
+    height: fit-content;
 
     width: 100%;
     display: flex;
@@ -3513,6 +3543,7 @@ padding-bottom: 5rem;
     height:fit-content;
     width: 100%;
     display: flex;
+    //background-color: blue;
     padding-bottom: 1.75rem;
     flex-direction: column;
     align-items: center;
@@ -3525,6 +3556,7 @@ padding-bottom: 5rem;
     display: flex;
     height: fit-content;
     align-items: center;
+
     margin-top: 3.5rem;
     align-self: flex-start;
    // justify-content: center;
@@ -3574,23 +3606,23 @@ padding-bottom: 5rem;
     height:fit-content;
    // background-color: red;
     //transform: translateX(-50vw);
-    width: 100%;
+    width: 85%;
     display: flex;
     flex-direction: column;
-    gap:.25rem;
+    gap:.5em;
     padding-left: 0;
-    margin-top: 1.25rem;
+    margin-top: 1.5rem;
   }
   .testimonialCard {
     width: 100%;
-    height: 8.5rem;
+    height: 9rem;
     transform: scale(1);
     border-radius: 16.5px;
-
-    gap: .875rem;
+    
+    gap: 1.325rem;
     border: 0px solid #FAF3D6;
 
-    padding-left: .25rem;
+    padding-left: 0;
     align-items: center;
     display: flex;
     //filter: drop-shadow(0px 3px 16px #FAF3D6);
@@ -3598,8 +3630,8 @@ padding-bottom: 5rem;
   }
   
   .testimonialCardImage {
-    width: 30%;
-    height: 60%;
+    width: 20%;
+    height: 70%;
 
     margin-left: 1rem;
     border-radius: 12px;
@@ -3610,19 +3642,21 @@ padding-bottom: 5rem;
     filter: drop-shadow(0px 4px 4px #faf3d600);
   }
   .testimonialContextContainer {
-    height: 60%;
+    height: 70%;
     width: 100%;
-    border-left: 3px solid #EC7878;
+    border-left: 3.5px solid #EC7878;
     
     align-self: center;
     padding-right: 1rem;
+    display: flex;
+    flex-direction: column;
     //background-color: red;
     padding-top: 0;
  
-    padding-left: 1rem;
-
+    padding-left: 1.25rem;
+    justify-content: space-evenly;
     
-    align-items: center;
+    align-items: flex-start;
   
   }
   .testimonialQuote {
@@ -3631,7 +3665,7 @@ padding-bottom: 5rem;
     font-family: Helvetica Neue;
     font-size: 1.640625rem;
    // font-size: 26.25px;
-   font-size: clamp(.925rem, 2vw, 1.64rem);
+   font-size: clamp(.925rem, 2.25vw, 1.64rem);
     font-style: normal;
     font-weight: 400;
     line-height: 122%; /* 32.02px */
@@ -3644,7 +3678,7 @@ padding-bottom: 5rem;
     //font-size: 18.75px;
 
     font-size: 1.171875rem;
-    font-size: clamp(.925rem, 2vw, 1.17rem);
+    font-size: clamp(.925rem, 2.25vw, 1.17rem);
     font-style: normal;
     font-weight: 400;
     line-height: 120%; /* 22.347px */
@@ -3771,7 +3805,7 @@ padding-bottom: 5rem;
     margin-top: 2.875rem;
     width: 100%;
     height: fit-content;
-    gap:2.5rem;
+    gap:2.75rem;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -3781,15 +3815,17 @@ padding-bottom: 5rem;
     margin-right: auto;
   }
   .membershipCardRow {
-    width: 100%;
-    height: fit-content;
-    flex-direction: column;
+    width: 85%;
+    height: 100%;
+    min-height: 100%;
+    flex-direction: row;
     display: flex;
 
-    gap:2.5rem;
+
+    gap:3rem
   }
   .membershipCardWrapper {
-    width: 80%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     height: fit-content;
@@ -3916,7 +3952,7 @@ padding-bottom: 5rem;
     font-family: Inter; // change to inter
    // font-size: 30px;
     font-size: 1.875rem;
-    font-size: clamp(1.2rem, 3vw, 1.875rem);
+    font-size: clamp(1.2rem, 2.75vw, 1.875rem);
     font-style: normal;
     transition: all .15s linear;
     font-weight: 500; // change to 600
@@ -3927,6 +3963,7 @@ padding-bottom: 5rem;
     font-family: Helvetica Neue;
    // font-size: 19.5px;
     font-size: 1.21875rem;
+    font-size: clamp(1rem, 2.25vw, 1.21rem);
     font-style: normal;
 
     font-weight: 400;
