--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -1694,3 +1694,639 @@
      //   letter-spacing: -0.562px;
     }
 }
+@media (min-width: 769px) and (max-width: 1024px) {
+           // 1. Learn
+           .propositionTopContent {
+            display: flex;
+            width: 100%;
+            min-height: fit-content;
+            z-index: 2;
+            flex-direction: row;
+            gap:2.5rem;
+            justify-content: flex-start;
+            margin-top: 0rem;
+        }
+        .propositionTopHeader {
+            width: fit-content;
+            height: fit-content;
+            flex-shrink: 0;
+            margin-left: auto;
+            text-align: right;
+        
+            transform: translateY(-2.25rem) translateX(-2.75rem);
+        
+        }
+        .propositionTopHeaderText {
+            color: #FAF3D6;
+            text-align: right;
+            font-family: Helvetica Neue;
+           // font-size: 60px;
+            font-size: 3.75rem;
+            font-size: clamp(2.5rem, 5vw, 3.75rem);
+            font-style: normal;
+            font-weight: 700;
+            line-height: 121.98%; /* 73.188px */
+            text-transform: uppercase;
+        }
+        .propositionTopHeaderSubtext {
+            color: #FAF3D6;
+            text-align: right;
+            font-family: Helvetica Neue;
+           // font-size: 56.25px;
+            font-size: 3.515625rem;
+            font-size: clamp(2.24rem, 5vw, 3.5rem);
+            font-style: normal;
+            font-weight: 500;
+            line-height: 121.98%; /* 68.614px */
+            letter-spacing: -1.687px;
+            transform: translateY(.5rem) translateX(0);
+        }
+        .propositionTopLeft {
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            width: 100%;
+            padding-top: 1.125rem;
+            padding-left: 2.5rem;
+
+            height: 100%;
+            z-index: 1;
+
+    
+        }
+        .topLeftContent {
+            min-width: 100%;
+            display: flex;
+            flex-direction: column;
+
+    
+        }
+        .propositionTopRight {
+            width: 80%;
+
+            margin-left: auto;
+    
+            margin-right: auto;
+          // background-color: red;
+            padding-left: 0;
+            height: 23rem;
+            display: flex;
+           // justify-content: center;
+            padding-top: 0;
+            margin-top: 2rem;
+            z-index: 1;
+    
+        }
+        .topRightContent {
+            padding-right: 0rem;
+            width: 100%;
+        
+            z-index: 1;
+        }
+        .propositionIcon {
+            border-radius: 10px;
+            border: 3px solid #ECCAB1;
+            width: 2.25rem;
+            height: 2.25rem;
+            background: #E3A77C;
+            color: #252525;
+            font-family: Helvetica Neue;
+           // font-size: 21px;
+    
+            font-size: clamp(1rem, 2.75vw, 1.25rem);
+            padding-left: 2px;
+            font-style: normal;
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            line-height: 122%; /* 25.792px */
+            letter-spacing: -0.634px;
+        }
+        .propositionIconText {
+            color: #E3A77C;
+            font-family: Helvetica Neue;
+            font-size: 1.5rem;
+           // font-size: 25px;
+            font-style: normal;
+            //font-size: clamp(1rem, 3vw, 1.65rem);
+            font-weight: 500;
+        
+            line-height: 122%; /* 31.005px */
+            letter-spacing: -0.763px;
+            text-transform: uppercase;
+        }
+        .propositionTitle {
+            color: #FAF3D6;
+            font-family: Helvetica Neue;
+          //  font-size: 45.5px;
+    
+            font-size: clamp(1.5rem, 5.5vw, 2.85rem);
+            font-style: normal;
+          //  padding-bottom: .7rem;
+          //  border-bottom: 3px solid #E3A77C;
+            font-weight: 700;
+            line-height: 120%; /* 55.808px */
+    
+            display: inline;
+            letter-spacing: -1px;
+            padding-bottom: .25rem;
+        }
+        .topLeftContext {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            padding-top:2rem;
+            padding-left: 1.5rem;
+           // transform: rotate(0.5deg);
+        }
+        .fontWeight500 {
+            font-weight: 500;
+        }
+        .topRightImage {
+           // width: 715px;
+            width: 100%;
+            height: 100%;
+            filter: drop-shadow(0px 4px 4px rgba(10,10,10,.15));
+            display: flex;
+            justify-content: center;
+          //  outline:.5px solid #FAF3D6;
+            z-index: 1;
+        
+           // background: #252525;
+            background-size: cover;
+            background-repeat: no-repeat;
+            object-fit: cover;
+            background-position: center;
+        }
+        .exploreImageButton {
+            width: fit-content;
+            height: 3.75rem;
+            border-radius: 90.75px;
+            border: 2.25px solid #F9F9F9;
+            background: rgba(37, 37, 37, 0.42);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap:12px;
+            backdrop-filter: blur(8px);
+            padding-left: 0px;
+            align-self: flex-end;
+            margin-left: auto;
+            margin-right: auto;
+            padding-left: 1.25rem;
+            padding-right: 1.25rem;
+            margin-bottom: .875rem;
+            transition: all .15s linear;
+        }
+        .exploreImageButton:hover {
+            filter: brightness(1.15);
+        }
+        .exploreImageText {
+            color: #FFF;
+            text-align: center;
+            font-family: Helvetica Neue;
+     
+            font-size: clamp(1rem, 2vw, 1.4rem);
+            font-style: normal;
+            font-weight: 400;
+            text-transform: capitalize;
+            transform: scaleY(.98);
+            line-height: 122%; /* 27.445px */
+            letter-spacing: -0.25px;
+        
+        }
+        // 2. advance
+        .midWrapper {
+            width:100%;
+            margin-top:4rem;
+            height: fit-content;
+            display: flex;
+            flex-direction: row;
+        // background-color: rgba(128, 0, 128, 0.8);
+        }
+        .midWrapperLeft {
+            width: 100%;
+      
+            height: 27rem;
+          //  background-color: red;
+            display: flex;
+            flex-direction: column;
+            z-index: 1;
+            margin-top: 1rem;
+            
+    
+            filter: drop-shadow(0px 4px 4px rgba(10,10,10,.2));
+        //  outline:1px solid #FAF3D6;
+        // background-color: #252525;
+        }
+        .midImageLeft {
+            max-width: 88%;
+            min-width: 88%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            object-fit: cover;
+            background-position: center;
+        }
+        .midImageRight {
+            min-width:88%;
+            max-width: 88%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        //  border-left: 1px dashed #FAF3D6;
+            background-size: cover;
+            background-repeat: no-repeat;
+            object-fit: cover;
+            background-position: center;
+        }
+        .midWrapperRight {
+            width: 100%;
+            padding-right: 2.75rem;
+            height: 100%;
+            align-items: center;
+          
+            align-self: flex-start;
+            justify-content: center;
+            display: flex;
+            padding-top: 0;
+        //  background-color: rgba(0, 0, 255, 0.2);
+        }
+        .midWrapperContext {
+            //width: 30.625vw;
+           // background-color: beige;
+            width: 100%;
+           // height: fit-content; // chnage this to center
+            height: 100%;
+            padding-top:2.5rem;
+            padding-right: .325rem;
+            display: flex;
+        
+          
+            flex-direction: column;
+        //  background-color: rgba(0, 106, 255, 0.2);
+            align-items: flex-end;
+        }
+        .propositionMidIcon {
+            width: 37.5px;
+            height: 37.5px;
+            flex-shrink: 0;
+            border-radius: 12.5px;
+            border: 4px solid #FDFFFC;
+            background: #D7F9B7;
+            color: #252525;
+            z-index: 1;
+            font-family: Helvetica Neue;
+        // font-size: 15.5px;
+            font-size: 0.96875rem;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 122%; /* 19.026px */
+            letter-spacing: -0.468px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-left:2px;
+        }
+        .midIconText {
+            color: #D7F9B7;
+    
+            font-family: Helvetica Neue;
+            //font-size: 18.75px;
+            font-size: 1.171875rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 122%; /* 22.871px */
+            z-index: 1;
+            letter-spacing: -0.25px;
+            text-transform: uppercase;
+        }
+        .midTitleContainer {
+            display:"flex";
+            text-align:right;
+            padding-top: .5rem;
+            align-items: flex-end;
+            transform: translateX(0);
+        }   
+        .midTitleText {
+            color: #FAF3D6;
+            display: inline;
+            text-align: right;
+            font-family: Helvetica Neue;
+            //font-size: 45.75px;
+            //font-size: 2.859375rem;
+    
+            font-size: clamp(1.5rem, 5.75vw, 2.85rem);
+            font-style: normal;
+            font-weight: 700;
+            line-height: 121.98%; /* 55.806px */
+            letter-spacing: -1.372px;
+        }
+        .midRightContext {
+            text-align: right;
+            width: 100%;
+    
+            display: inline;
+           // background-color: red;
+            transform: translateX(0);
+            margin-top: .5rem;
+        //background-color: red;
+        //   padding-left: 2px;
+            
+        // transform: rotate(0.5deg);
+        }
+        .midWrapperCarousel {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 22rem;
+            margin-top: 3rem;
+            background-color: #252525;
+        }
+        .midCarouselImage {
+    
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            &:nth-of-type(1) {
+                width: 33%;
+            }
+            &:nth-of-type(2) {
+                width: 34%;
+            }
+            &:nth-of-type(3) {
+                width: 33%;
+            }
+        }
+    
+        // 3. excel
+        .propositionBottomWrapper {
+            height: 100%;
+    
+            width: 100%;
+    
+            display: flex;
+            flex-direction: column;
+            padding-top: 0rem;
+      
+          //  background-color: rgba(255, 0, 0, 0.161);
+        }
+        .propositionBottomContent {
+            display:flex;
+            flex-direction: row;
+            width: 100%;
+        //    background-color: rgba(128, 0, 128, 0.184);
+            height: fit-content;
+    
+        }
+        .bottomContentLeft {
+            width:100%;
+            height: fit-content;
+            display: flex;
+    
+            //align-items: center;
+           // justify-content: center;
+           padding-top: 3.5rem;
+           padding-left: 3.75rem;
+      
+    
+          //  background-color: rgba(128, 81, 0, 0.484);
+        }
+        .bottomContentContext {
+            display:flex;
+          //  background-color: red;
+            width: 100%;
+            height: fit-content;
+            flex-direction: column;
+          //  background-color: rgba(0, 58, 128, 0.284);
+        }
+        .bottomPropositionIcon {
+            border-radius: 12.478px;
+            border: 4.159px solid #ACABFB;
+            width: 37.5px;
+            height: 37.5px;
+            flex-shrink: 0;
+            background: #7978F8;
+            color: #252525;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-left: 2px;
+            font-family: Helvetica Neue;
+            font-size: 0.974875rem;
+            //font-size: 15.598px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 121.98%; /* 19.026px */
+            letter-spacing: -0.468px;
+            padding-top: 1px;
+            transform: translateX(.45rem) translateY(.2rem);
+        }
+        .bottomIconText {
+            color: #7978F8;
+            font-family: Helvetica Neue;
+           // font-size: 18.75px;
+            font-size: 1.171875rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 121.98%; /* 22.871px */
+            letter-spacing: -0.562px;
+            text-transform: uppercase;
+            transform: translateX(.45rem) translateY(.2rem);
+        }
+        .bottomTitleContainer {
+            min-width: fit-content;
+            display: flex;
+    
+            padding-left: .425rem;
+      
+            align-items: center;
+            gap:2rem;
+            padding-top: 1.5rem;
+        }
+        .bottomTitleWrapper {
+    
+        }
+        .subsectionSubtextSmall {
+            font-size: clamp(1.125rem, 3vw, 1.625rem);
+        }
+        .bottomSubtextContainer {
+            width: 100%;
+            
+            display: inline;
+    
+            padding-left: .125rem;
+            padding-top: 2rem;
+            font-size: clamp(1.125rem, 3vw, 1.625rem);
+        }
+        .bottomContentRight {
+            width:64%;
+            margin-left: auto;
+            margin-right: auto;
+        //    background-color: red;
+        
+            align-self: flex-end;
+            height: 17.5rem;
+            min-height: 17.5rem;
+            max-height: 17.5rem;
+        }
+        .bottomRightImage {
+            width: 100%;
+            height: 100%;
+            flex-shrink: 0;
+            //border-radius: 24px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-top-left-radius: 24px;
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+            border-bottom-left-radius: 24px;
+         //   outline: 1px dashed #FAF3D6;
+            background-color: #252525;
+            background-size: cover;
+            box-shadow: 0px 4px 8px 0px rgba(0,0,0,.2);
+         //   filter: drop-shadow(0px 4px 4px rgba(0,0,0,.15));
+            background-repeat: no-repeat;
+            object-fit: cover;
+            background-position: center;
+            
+        }
+        .caseStudiesButton {
+            width: fit-content;
+            height:3.75rem;
+            padding-left:1.75rem;
+            padding-right: 1.5rem;
+            padding-top: .4rem;
+            padding-bottom: .4rem;
+            font-family: Helvetica Neue;
+            //font-size: 22.5px;
+            font-size: clamp(1.125rem, 4vw, 1.325rem);
+        
+            flex-shrink: 0;
+            border-radius: 90.75px;
+            border: 2px solid #F9F9F9;
+            background: rgba(37, 37, 37, 0.42);
+            color: #FFF;
+            text-align: center;
+            font-family: Helvetica Neue;
+            //font-size: 22.5px;
+            font-style: normal;
+            font-weight: 400;
+    
+            line-height: 121.98%; /* 27.445px */
+            letter-spacing: -0.675px;
+            text-transform: capitalize;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+    
+            margin-top: 3.5rem;
+            transform: translateY(-1.325rem);
+        
+            margin-left: auto;
+            margin-right: auto;
+            transition: all .2s linear;
+        }
+        .caseStudiesButton:hover {
+            transform: scale(1.04);
+        }
+        .propositionBottomCarouselAlt {
+    
+            height: fit-content;
+            align-self: center;
+            min-width: 100%;
+    
+            display: flex;
+            margin-top: 3.25rem;
+            overflow-y: hidden;
+         //   background-color: red;
+            overflow-x: scroll;
+            align-items: center;
+            justify-content: flex-start;
+            
+            scroll-behavior:smooth;
+         
+            scroll-snap-type: x mandatory;
+            -webkit-overflow-scrolling: touch;
+    
+    
+            &::-webkit-scrollbar {
+              display: none;
+            }
+    
+            /* Hide scrollbar for IE, Edge and Firefox */
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
+            
+            /* Prevent scrollbar space */
+            overflow: -moz-scrollbars-none; /* Older Firefox */
+           // transform: translateX(-33.33%);
+          
+     
+        }
+    
+        .bottomCarouselItem {
+            width: 20%;
+            scroll-snap-align: start;
+            min-width: 20%;
+            height: 100%;
+    
+            align-self: center;
+            flex: 0 0 20%; 
+            display: flex;
+            flex-direction: column;
+    
+          //  background-color: red;
+            align-items: center;
+          
+            justify-content: center;
+        }
+        .bottomCarouselImage {
+            height: 11.25rem;
+            width: 86%;
+            margin-left: auto;
+            margin-right: auto;
+    
+          
+            display: flex;
+            align-items: center;
+            border-radius: 26px;
+            transform: scale(.95);
+            justify-content: center;
+            background-color: #252525;
+            border: 1px solid #FAF3D6;
+        }
+        .bottomCarouselText {
+            color: #FAF3D6;
+            font-family: Helvetica Neue;
+           // font-size: 26.25px;
+          //  font-size: 1.625rem;
+            font-style: normal;
+    
+            font-weight: 500;
+            font-size: clamp(1rem, 2.25vw, 1.625rem);
+            line-height: 122%; /* 32.02px */
+            letter-spacing: -0.5px;
+            text-align: center;
+        }
+        .bottomCarouselSubtext {
+            color: #FAF3D6;
+            font-family: Helvetica Neue;
+           // font-size: 18.75px;
+           font-size: clamp(1rem, 2.75vw, 1.175rem);
+        
+            font-style: normal;
+            font-weight: 300;
+            text-align: center;
+            line-height: 124%; /* 22.646px */
+         //   letter-spacing: -0.562px;
+        }
+}
